--- a/README.Rmd
+++ b/README.Rmd
@@ -54,6 +54,9 @@ Install gm:
 
 ``` r
 install.packages("gm")
+
+# Or install the development version from GitHub
+pak::pak("flujoo/gm")
 ```
 
 Install [MuseScore](https://musescore.org/). MuseScore is open source and free notation software.
